# mlops-eval-hw-solved

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  prices.yaml  pyproject.toml  variants.yaml
.github/workflows/: mirror-images.yml
configs/: v1.yaml  v2.yaml  v3.yaml  v4.yaml  v5.yaml
data/: eval_dataset.jsonl
docker/: mlflow.Dockerfile
docs/: README.md  reference_solution.md  serverless.md
observability/: prometheus.yml
observability/grafana/dashboards/: live_monitoring.json
observability/grafana/provisioning/dashboards/: dashboards.yml
prompts/: classifier_input.txt  classifier_output.txt  judge.txt  v1_baseline.txt  v2_explicit_refusal.txt  v3_prompt_hardening.txt
scripts/: chat.py  list_models.py
src/: __init__.py  config.py  configs.py  constants.py  eval.py  judge.py  nebius_client.py  pricing.py  variants.py
src/assistant/: __init__.py  pipeline.py  service.py  types.py
src/monitoring/: __init__.py  judge_worker.py  metrics.py
