[project]
name = "mlops-emeli-hometask"
version = "0.1.0"
description = "Travel-assistant MLOps homework: variant iteration with MLflow + production-shaped monitoring (Prometheus/Grafana)."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "prometheus-client>=0.21",
    "mlflow>=2.18",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
